// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect.svelte > should render using default field mapping 1`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col "
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <items
      class="flex flex-wrap"
    >
      <!---->
      <!---->
      
      <!---->
       
      <p>
        One
      </p>
      <!---->
      
    </items>
    
    <!---->
     
    <rk-icon
      aria-label="closed"
      class=""
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
    </rk-icon>
    <!---->
  </selected-item>
   
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using default field mapping 2`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <items
      class="flex flex-wrap"
    >
      <!---->
      <!---->
      
      <!---->
       
      <p>
        One
      </p>
      <!---->
      
    </items>
    
    <!---->
     
    <rk-icon
      aria-label="opened"
      class=""
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
    </rk-icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <rk-list
      aria-label="list"
      class=""
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <rk-body>
        <!---->
        <rk-list-item
          aria-current="false"
          aria-selected="false"
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
          
          <!---->
           
          <p>
            Two
          </p>
          <!---->
          <!---->
        </rk-list-item>
        <rk-list-item
          aria-current="false"
          aria-selected="false"
          data-path="1"
          role="option"
        >
          <!---->
          <!---->
          
          <!---->
           
          <p>
            Three
          </p>
          <!---->
          <!---->
        </rk-list-item>
        
        <!---->
      </rk-body>
       
      <!---->
    </rk-list>
    <!---->
  </scroll>
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using default field mapping 3`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <items
      class="flex flex-wrap"
    >
      <!---->
      <!---->
      
      <!---->
       
      <p>
        One
      </p>
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Two
      </p>
      <!---->
      
    </items>
    
    <!---->
     
    <rk-icon
      aria-label="opened"
      class=""
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
    </rk-icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <rk-list
      aria-label="list"
      class=""
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <rk-body>
        <!---->
        <rk-list-item
          aria-current="false"
          aria-selected="false"
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
          
          <!---->
           
          <p>
            Three
          </p>
          <!---->
          <!---->
        </rk-list-item>
        
        <!---->
      </rk-body>
       
      <!---->
    </rk-list>
    <!---->
  </scroll>
  <!---->
</input-select>
`;
